--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Uthra's Project</title>
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">    
   </head>
   <body>
-    <h1>Uthra's Computer Project</h1>
-    <img src="https://uthra-project-python--sankarmr.repl.co/static/banner.jpg" height="300">
-    <h2>About Uthra's Job Portal Project</h2>
-    <p>
+    <div class="container">
+    <h1 class="text-center mt-2 mb-4">Uthra's Job Portal Project</h1>
+    <img src="https://uthra-project-python--sankarmr.repl.co/static/banner.jpg" height="300" width="100%" style="object-fit:cover;">
+    <h2 class="text-center mt-3 mb-4">About Job Portal Project</h2>
+    <p class="lead">
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
-    <h2>Job Positions Open</h2>
-    <h2>To do positions to be filled</h2>
-    <button>Contact us</button>
+    <h2 class="text-center mt-3 mb-4">Job Positions Open</h2>
+    <p>To do positions to be filled</p>
+      <div class="text-center">
+    <button type="button" class="btn btn-lg btn-primary mb-4">Contact us</button>
+      <p>Copyright 2023</p>
+        </div>
+      </div>
   </body>
   
 </html>
