--- a/templates/home.html
+++ b/templates/home.html
@@ -6,25 +6,29 @@
     <title>Uthra's Project</title>
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
-    <div class="container">
-    <h1 class="text-center mt-2 mb-4" style="color: rgb(80, 80, 80);">{{company_name}} Job Portal Project</h1>
+    {%include 'nav.html'%}
+    <div class="container" style="margin-top:85px;">
+    <h1 class="text-center mb-2" style="color: rgb(80, 80, 80);">Job Portal</h1>
+    </div>
     <img src="https://uthra-project-python--sankarmr.repl.co/static/banner.jpg" height="300" width="100%" style="object-fit:cover;">
-    <h2 class="text-center mt-3 mb-4" style="color: rgb(80, 80, 80);">About Job Portal Project</h2>
+    <div class="container">
+    <h2 class="text-center mt-3 mb-4" style="color: rgb(80, 80, 80);">About Job Portal</h2>
     <p class="lead">
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
-    <h2 class="text-center mt-3 mb-4 border-bottom" style="color: rgb(80, 80, 80)">Job Positions Open</h2>
+    <h2 class="text-center mt-3 mb-4 pb-2 border-bottom" style="color: rgb(80, 80, 80)">Job Positions Open</h2>
     
       {% for job in jobs %}
         {%include 'joblist.html'%}
       {% endfor %}
       <div class="text-center">
-        <button type="button" class="btn btn-lg btn-primary mb-4">Contact us</button>
-        <p>Copyright 2023</p>
+        <button type="button" class="btn btn-lg btn-primary mb-4">Contact us</button>        
         </div>
       </div>
+{%include 'footer.html'%}
   </body>
   
 </html>
