--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Uthra's Project</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <title>Job Portal</title>
+    {%include 'bootstrap.html'%}
   </head>
   <body>
     {%include 'nav.html'%}
-    <div class="container" style="margin-top:85px;">
-    <h1 class="text-center mb-2" style="color: rgb(80, 80, 80);">Job Portal</h1>
-    </div>
-    <img src="https://uthra-project-python-v2--sankarmr.repl.co/static/banner.jpg" height="300" width="100%" style="object-fit:cover;">
+    {% include 'banner.html'%}
     <div class="container">
     <h2 class="text-center mt-3 mb-4" style="color: rgb(80, 80, 80);">About Job Portal</h2>
     <p class="lead">
