insert new jobs in db

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         {%include 'joblist.html'%}
       {% endfor %}
       <div class="text-center">
-        <button type="button" class="btn btn-lg btn-primary mb-4">Contact us</button>        
+        <a href="/contactus" type="button" class="btn btn-lg btn-primary mb-4">Contact us</a>        
         </div>
       </div>
 {%include 'footer.html'%}
