--- a/templates/footer.html
+++ b/templates/footer.html
@@ -14,11 +14,11 @@
   </symbol>
 </svg>
 
-<div class="container">
+<div class="container mt-5">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <svg class="bi bg-secondary" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
       </a>
       <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
     </div>
