--- a/templates/joblist.html
+++ b/templates/joblist.html
@@ -1,5 +1,5 @@
 <div class="border-bottom row" style="margin-bottom: 16px;">
-  <div class="col-9">
+  <div class="col-9 mb-2">
           <h4 style="color: rgb(120,120,120)">{{job['title']}}</h4>
           <div><b>Location:</b> {{job['location']}}</div>
           {% if 'salary' in job %}          
@@ -7,6 +7,6 @@
           {%endif%}
   </div>
   <div class="col-3">
-      <button type="button" class="btn btn-outline-primary">Apply</button>
+      <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
         </div>
