--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,7 +10,7 @@
         <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
         <li><a href="#" class="nav-link px-2">Features</a></li>
         <li><a href="#" class="nav-link px-2">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2">FAQs</a></li>
+        <li><a href="/contactus" class="nav-link px-2">Contact Us</a></li>
         <li><a href="#" class="nav-link px-2">About</a></li>
       </ul>
 
