All commits until Nov 15-2023

--- a/templates/banner.html
+++ b/templates/banner.html
@@ -1,6 +1,8 @@
-<div class="container" style="margin-top:85px;">
-    <h1 class="text-center mb-2" style="color: rgb(80, 80, 80);">Job Portal</h1>
-    </div>
-<div class="container-fluid ps-0 pe-0">
-    <img src="https://uthra-project-python-v2--sankarmr.repl.co/static/banner.jpg" height="300" width="100%" style="object-fit:cover;">
+<div class="container-fluid ps-0 pe-0 pt-5 pt-md-0">
+  <div class="container pt-4 pt-md-4 mt-5 mt-md-4">
+      <h1 class="text-center py-1 mb-2" style="color: rgb(80, 80, 80);">Job Portal</h1>
+      </div>
+  <div class="container-fluid ps-0 pe-0" >
+      <img src="https://uthra-project-python-v2--sankarmr.repl.co/static/banner.jpg" height="300" width="100%" style="object-fit:cover;">
+  </div>
 </div>
