--- a/templates/jobdetails.html
+++ b/templates/jobdetails.html
@@ -3,14 +3,13 @@
 <head>
   <title>{{jobs.title}} - Job Details</title>
   {%include 'bootstrap.html'%}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
   <body>
     {%include 'nav.html'%}
     {%include 'banner.html'%}
-    <div class="container">
-    <h1 class="text-center" style="color: rgb(80, 80, 80);">Job Details</h1>
-    </div>
-    <div class="container">
+
+    <div class="container mt-3">
       
       <h3 class="text-secondary">{{jobs.title}}</h3>
       <h5>Location</h5>
@@ -29,43 +28,10 @@
       </ol>
       <h5>Salary</h5>
       <p>{{jobs.currency}}{{jobs.salary}}</p>
+      <a href="/applyjob/{{jobs.id}}" class="btn butn-color">Apply Now</a>
     </div>
-    <form action="/job/{{id}}" method="post">      
-    <div class="container">
-    <h1 class="text-center" style="color: rgb(80, 80, 80);">Apply Here</h1>
-    </div>
-    <div class="container">
-    <div class="row">
-      <div class="col-4">      
-      <div class="form-group">
-        <label for="fullname">Your Name</label>
-        <input type="text" class="form-control mt-2" name="fullname" id="fullname" placeholder="Full Name" required>
-      </div>
-      <div class="form-group mt-3">
-        <label for="email">Valid Email</label>
-        <input type="email" class="form-control mt-2" name="email" id="email" placeholder="Email">
-      </div> 
-      <div class="form-group mt-3">
-        <label for="linkedin_url">LinkedIn URL</label>
-        <input type="url" class="form-control mt-2" name="linkedin_url" id="linkedin_url" placeholder="Your LinkedIn URL">
-      </div>
-      <div class="form-group mt-3">
-        <label for="education">Education</label>
-        <textarea class="form-control mt-2" name="education" id="education" rows="4" placeholder="Your Education"></textarea>
-      </div>
-      <div class="form-group mt-3">
-        <label for="experience">Work Experience</label>
-        <textarea class="form-control mt-2" name="experience" id="experience" rows="4" placeholder="Work Experience"></textarea>
-      </div>
-        <div class="form-group mt-3">
-        <label for="resume_url">LinkedIn URL</label>
-        <input type="url" class="form-control mt-2" name="resume_url" id="resume_url" placeholder="Your Resume URL">
-      </div>
-      </div>              
-    </div>
-      <input type="submit" class="btn btn-primary mt-4" value="Submit" />
-    </div> 
-      </form>
+    
     {%include 'footer.html'%}
+    
   </body>
 </html>
