--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,22 +1,41 @@
-<div class="container-fluid fixed-top bg-white" style="padding:0 0;">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between shadow-sm rounded" style="height:75px;">
-      <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <svg class="bi ms-3" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
-      </div>
-
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2">Features</a></li>
-        <li><a href="#" class="nav-link px-2">Pricing</a></li>
-        <li><a href="/contactus" class="nav-link px-2">Contact Us</a></li>
-        <li><a href="#" class="nav-link px-2">About</a></li>
-      </ul>
-
-      <div class="col-md-3 text-end me-3">
-        <button type="button" class="btn btn-outline-primary me-2">Login</button>
-        <button type="button" class="btn btn-primary">Sign-up</button>
-      </div>
-    </header>
+  <div class="container-fluid fixed-top bg-white pt-2">      
+      <div class="row justify-content-between">
+        <div class="col-4">
+          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+            <img src="https://uthra-project-python-v2--sankarmr.repl.co/static/U-icon.png" width="40" height="40" class="ms-3" />          
+          </a>
+        </div>
+        
+        <div class="col-4">
+          <div>
+            <ul class="nav justify-content-center">
+              	<li><a href="/" class="nav-link px-2 link-secondary reset-btn">Home</a></li>
+                <li><a href="/contactus" class="nav-link px-2 reset-btn">Contact Us</a></li>
+                <li><a href="/about" class="nav-link px-2 reset-btn">About</a></li>        
+              </ul>          
+          </div>
+        </div>
+        
+        <div class="col-4">
+          {% if current_user.is_authenticated %}
+            <div id="postAuth" class="nav justify-content-end mt-2">
+              <label class="px-2" ><span style="font-weight:bold;">User:</span>               
+                {{current_user.first_name}}
+              </label>
+              </label>
+              <a href="/" class="pe-2" style="color:#50abc8;" type="button" title="Settings">
+                <span class="material-symbols-outlined">settings</span>
+              </a>
+              <a href="/logout" class="me-3" style="color:#50abc8" title="Logout">
+                <span class="material-symbols-outlined">logout</span>
+              </a>
+            </div>
+          {% else %}
+            <div id="preAuth" class="nav justify-content-end">
+              <a href="/login" type="button" class="btn reset-btn me-2 mb-1 mb-md-0">Login</a>
+              <a href="/register" type="button" class="btn butn-color">Sign-up</a>
+            </div>          
+          {% endif %}
+        </div>
+      </div>    
   </div>
